refactor(booking): se elimino espacios y saltos de lineas innecesarios